--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,23 +9,27 @@
     <table class="table">
       <thead>
       <tr>
-        <th scope="col">Nombre</th>
+        <th scope="col">ID</th>
+        <th scope="col">Nombre completo</th>
         <th scope="col">Materia</th>
         <th scope="col">Nota</th>
+        <th scope="col">Accion</th>
       </tr>
       </thead>
       <tbody>
-      <tr *ngFor="let alumno of alumnos | search:filter">
-        <td>{{ alumno.nombre }}</td>
+      <tr *ngFor="let alumno of alumnos | search:filter ">
+        <td>{{ alumno.id }}</td>
+        <td>{{ alumno.nombre | concatNames:alumno.apellido }}</td>
         <td>{{ alumno.materia }}</td>
         <td>
           <div [ngClass]="{'green': alumno.nota >= 7, 'red' : alumno.nota <= 6}">
             <p> {{ alumno.nota }}</p>
           </div>
         </td>
+        <td><button type="button" class="btn btn-danger" (click)="deleteAlumno(alumno.id, alumnos)" >Borrar</button></td>
       </tr>
       </tbody>
     </table>
   </section>
-  <app-form></app-form>
+  <app-form [alumnos]="alumnos"></app-form>
 </div>
