Directiva - Tamaño de fuente

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -9,11 +9,11 @@
     <table class="table">
       <thead>
       <tr>
-        <th scope="col">ID</th>
-        <th scope="col">Nombre completo</th>
-        <th scope="col">Materia</th>
-        <th scope="col">Nota</th>
-        <th scope="col">Accion</th>
+        <th appTamanioFuente scope="col">ID</th>
+        <th appTamanioFuente scope="col">Nombre completo</th>
+        <th appTamanioFuente scope="col">Materia</th>
+        <th appTamanioFuente scope="col">Nota</th>
+        <th appTamanioFuente scope="col">Accion</th>
       </tr>
       </thead>
       <tbody>
